--- a/src/app/shared/widgets/cards/card-simple-track/card-simple-track.component.html
+++ b/src/app/shared/widgets/cards/card-simple-track/card-simple-track.component.html
@@ -18,8 +18,7 @@
       </div>
     </div>
 
-    <!-- TODO -->
-    <div class="absolute right-2 top-2 select-none">
+    <!-- <div class="absolute right-2 top-2 select-none">
       <div class="relative" (click)="$event.stopPropagation()">
         <div
           class="flex h-max w-max cursor-pointer gap-[2px] rounded-md bg-dark-light p-2"
@@ -48,7 +47,7 @@
           </div>
         }
       </div>
-    </div>
+    </div> -->
 
     <!-- TRACK DATA -->
     <div class="relative flex-1 overflow-hidden">
@@ -56,13 +55,14 @@
       <div>
         <div>
           <p class="flex flex-col items-center justify-start gap-1 font-black text-gray sm:flex-row">
-            @if ((this.userTrackStats()?.msPlayed ?? 0) > 0) {
+            @if ((this.userTrackStats()?.msPlayed ?? 0) > 0 || (this.userTrackStats()?.timesPlayed ?? 0) > 0) {
               <span class="w-full text-base sm:w-max">{{ this.index() }}#</span>
               <span class="w-full text-base sm:w-max">
                 <span class="hidden sm:inline"> - </span>
                 <span>
                   {{ this.userTrackStats()?.msPlayed ?? 0 | timeSimple }}
                 </span>
+                <span [title]="'@@card-track__times-played-toolip' | translate"> ({{ this.userTrackStats()?.timesPlayed ?? 0 }}) </span>
               </span>
             } @else {
               <span class="w-full text-xl">
