--- a/src/app/modules/main-app/pages/extended-history/extended-history.component.html
+++ b/src/app/modules/main-app/pages/extended-history/extended-history.component.html
@@ -2,7 +2,11 @@
   <div>
     <app-general-stats [listeningStats]="this.listeningDataRecord()" />
 
-    <app-extended-history-filter [userTopTracksAnalysis]="this.userTopTracksAnalysis()" />
+    <app-extended-history-filter
+      [userTopTracksAnalysis]="this.userTopTracksAnalysis()"
+      [minDate]="this.userStartingDate()"
+      [maxDate]="this.userEndingDate()"
+    />
 
     <app-user-top-extended [userTopTracksAnalysis]="this.userTopTracksAnalysis()" />
   </div>
