--- a/src/app/modules/main-app/pages/extended-history/extended-history-filter/extended-history-filter.html
+++ b/src/app/modules/main-app/pages/extended-history/extended-history-filter/extended-history-filter.html
@@ -2,7 +2,7 @@
   <div>
     <div class="flex gap-2 items-center">
       <p class="text-gray">
-        <span><span class="text-white">CURRENTLY</span> Displaying data from</span>
+        <span><span class="text-bold underline">CURRENTLY</span> Displaying data from</span>
 
         <!-- <span class="text-xl font-black text-pure-white">
           {{ this.userTopTracksAnalysis()?.startingDate | date: 'dd.MM.yyyy' }}
@@ -37,17 +37,17 @@
     </div>
 
     <p class="text-gray">
-      <span>Total listening time:&nbsp;</span>
+      <span>Selection listening time:&nbsp;</span>
       <span class="text-xl font-black text-pure-white">
         {{ this.userTopTracksAnalysis()?.totalMsPlayed || 0 | timeSimple }}
       </span>
     </p>
     <p class="text-gray">
-      <span>Number of records:</span>
+      <span>Selection number of listening records:</span>
       <span class="text-xl font-black text-pure-white"> {{ this.userTopTracksAnalysis()?.totalTracksPlayed }} </span>
     </p>
     <p class="text-gray">
-      <span>Number of unique tracks:</span>
+      <span>Selection number of unique tracks:</span>
       <span class="text-xl font-black text-pure-white">
         {{ this.userTopTracksAnalysis()?.totalUniqueTracksPlayed || 0 }}
       </span>
