--- a/src/app/modules/main-app/pages/extended-history/general-stats/general-stats.html
+++ b/src/app/modules/main-app/pages/extended-history/general-stats/general-stats.html
@@ -17,7 +17,7 @@
       </span>
     </p>
     <p class="text-gray">
-      <span>Number of records:</span>
+      <span>Number of listening records:</span>
       <span class="text-xl font-black text-pure-white"> {{ this.listeningStats()?.totalRecordsNumber || 0 }} </span>
     </p>
     <p class="text-gray">
